--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,24 +7,28 @@
     @apply text-teal-700 underline underline-offset-2 [&>span]:m-auto [&>span]:inline-block;
   }
 
-  .table-wrapper {
-    @apply mt-12 rounded-xl;
+  .index-table {
+    @apply rounded-b-md shadow-md;
   }
 
-  .index-table {
-    @apply shadow-md [&>*:nth-child(odd)]:bg-slate-500/15;
+  .table-heading {
+    @apply bg-lime rounded-t-md px-4 py-2 text-2xl font-semibold text-white;
+  }
+
+  .header {
+    @apply cursor-pointer font-inter text-sm font-semibold capitalize text-stone-900/90 md:text-lg;
   }
 
   .row {
-    @apply flex w-full flex-row items-center justify-between p-2;
+    @apply flex w-full flex-row items-center justify-between p-2 md:p-4;
   }
   .row > * {
     @apply inline-flex items-center justify-between gap-2 text-wrap px-4;
   }
 
   .hover-touchable {
-    @apply transition-all duration-300;
-    @apply hover:scale-[.97] hover:bg-amber-400 hover:text-white/90 focus:scale-95;
+    @apply transition-all duration-200;
+    @apply hover:bg-lime/50 hover:my-2 hover:scale-[.97] hover:font-medium hover:text-stone-900/90 focus:scale-95;
   }
 }
 
